--- a/Arrow/style.css
+++ b/Arrow/style.css
@@ -1,8 +1,7 @@
-#arrow {
+.arrow {
 	height: 10px;
 	width: 10px;
 	background: blue;
 	position: absolute;
-	top: 500px;
-	left: 50px;
+	top: calc(100% - 10px);
 }
